--- a/.config/i3/config
+++ b/.config/i3/config
@@ -150,8 +150,8 @@ bindsym $mod+Shift+8 move container to workspace number 8; workspace 8
 bindsym $mod+Shift+9 move container to workspace number 9; workspace 9
 bindsym $mod+Shift+0 move container to workspace number 10; workspace 10
 
-bindsym $mod+$alt+Control+Right move container to workspace next
-bindsym $mod+$alt+Control+Left move container to workspace prev
+bindsym $mod+$alt+Control+Right move container to workspace next, workspace next
+bindsym $mod+$alt+Control+Left move container to workspace prev, workspace prev
 
 bindsym $mod+Alt+Shift+1 move container to workspace number 11; workspace 11
 bindsym $mod+Alt+Shift+2 move container to workspace number 12; workspace 12
