--- a/.config/sway/config
+++ b/.config/sway/config
@@ -43,15 +43,18 @@ workspace 18 output $output-secondary $output-terniary
 workspace 19 output $output-secondary $output-terniary
 workspace 20 output $output-secondary $output-terniary
 
-hide_edge_borders --i3 smart_no_gaps
 #############################################
 # From here on it's generic
+
+# Remove titlebar
+font pango: SauceCodePro Sans 0
+titlebar_border_thickness 2
+titlebar_padding 2
 
 # set modifier
 set $mod Mod4
 set $alt Mod1
 
-font pango: SauceCodePro Sans 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
