do not use login shell

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,7 +9,7 @@ font=SauceCodePro Nerd Font Mono
 # pad=2x2
 shell=tmux
 term=foot
-login-shell=yes
+login-shell=no
 # workers=<number of logical CPUs>
 
 [scrollback]
