decrease shell fontsize

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,7 +1,7 @@
 # -*- conf -*-
 
 # font=
-font=SauceCodePro Nerd Font Mono
+font=SauceCodePro Nerd Font Mono:size=7
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
@@ -108,3 +108,6 @@ bright7=                 fdf6e3
 # select-word=BTN_LEFT-2
 # select-word-whitespace=Control+BTN_LEFT-2
 # select-row=BTN_LEFT-3
+
+[tweak]
+allow-overflowing-double-width-glyphs=true
