--- a/.config/sway/config
+++ b/.config/sway/config
@@ -51,6 +51,9 @@ font pango: SauceCodePro Sans 0
 titlebar_border_thickness 2
 titlebar_padding 2
 
+# Rules for wayland native windows
+for_window [app_id=blueman-manager] floating enable
+
 # i3 doesn't seem to support including configs, so the synchronization of the
 # generic configuration has to be done manually.
 include ~/.dotfiles/.config/sway/config_generic
