--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,7 @@
 set $mod Mod4
 set $Locker i3lock -i ~/.wallpaper.png && sleep 1
 
-exec --no-startup-id hsetroot -center ~/.wallpaper.png
+exec --no-startup-id hsetroot -fill ~/.wallpaper.png
 exec --no-startup-id nm-applet &
 exec --no-startup-id i3-autodisplay
 
@@ -12,6 +12,10 @@ bindsym $mod+Shift+r restart
 set $term gnome-terminal
 
 font pango: SauceCodePro Sans 8
+
+set $output-primary eDP-1-1
+set $output-secondary DP-1-1
+set $output-terniary DP-1-2
 
 #############################################
 # From here on it's generic
@@ -116,7 +120,30 @@ bindsym $mod+space floating toggle
 # change focus between tiling / floating windows
 bindsym $mod+Shift+space focus mode_toggle
 
-# switch to workspace
+# workspace config
+
+workspace 1 output $output-primary
+workspace 2 output $output-primary
+workspace 3 output $output-primary
+workspace 4 output $output-primary
+workspace 5 output $output-primary
+workspace 6 output $output-primary
+workspace 7 output $output-primary
+workspace 8 output $output-primary
+workspace 9 output $output-primary
+workspace 10 output $output-primary
+
+workspace 11 output $output-secondary $output-terniary
+workspace 12 output $output-secondary $output-terniary
+workspace 13 output $output-secondary $output-terniary
+workspace 14 output $output-secondary $output-terniary
+workspace 15 output $output-secondary $output-terniary
+workspace 16 output $output-secondary $output-terniary
+workspace 17 output $output-secondary $output-terniary
+workspace 18 output $output-secondary $output-terniary
+workspace 19 output $output-secondary $output-terniary
+workspace 20 output $output-secondary $output-terniary
+
 bindsym $alt+Control+Right workspace next
 bindsym $alt+Control+Left workspace prev
 bindsym $mod+1 workspace number 1
@@ -130,16 +157,16 @@ bindsym $mod+8 workspace number 8
 bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
 
-bindsym $mod+Alt+1 workspace number 11
-bindsym $mod+Alt+2 workspace number 12
-bindsym $mod+Alt+3 workspace number 13
-bindsym $mod+Alt+4 workspace number 14
-bindsym $mod+Alt+5 workspace number 15
-bindsym $mod+Alt+6 workspace number 16
-bindsym $mod+Alt+7 workspace number 17
-bindsym $mod+Alt+8 workspace number 18
-bindsym $mod+Alt+9 workspace number 19
-bindsym $mod+Alt+0 workspace number 20
+bindsym $mod+F1 workspace number 11
+bindsym $mod+F2 workspace number 12
+bindsym $mod+F3 workspace number 13
+bindsym $mod+F4 workspace number 14
+bindsym $mod+F5 workspace number 15
+bindsym $mod+F6 workspace number 16
+bindsym $mod+F7 workspace number 17
+bindsym $mod+F8 workspace number 18
+bindsym $mod+F9 workspace number 19
+bindsym $mod+F10 workspace number 20
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number 1; workspace 1
@@ -156,16 +183,16 @@ bindsym $mod+Shift+0 move container to workspace number 10; workspace 10
 bindsym $mod+$alt+Control+Right move container to workspace next, workspace next
 bindsym $mod+$alt+Control+Left move container to workspace prev, workspace prev
 
-bindsym $mod+Alt+Shift+1 move container to workspace number 11; workspace 11
-bindsym $mod+Alt+Shift+2 move container to workspace number 12; workspace 12
-bindsym $mod+Alt+Shift+3 move container to workspace number 13; workspace 13
-bindsym $mod+Alt+Shift+4 move container to workspace number 14; workspace 14
-bindsym $mod+Alt+Shift+5 move container to workspace number 15; workspace 15
-bindsym $mod+Alt+Shift+6 move container to workspace number 16; workspace 16
-bindsym $mod+Alt+Shift+7 move container to workspace number 17; workspace 17
-bindsym $mod+Alt+Shift+8 move container to workspace number 18; workspace 18
-bindsym $mod+Alt+Shift+9 move container to workspace number 19; workspace 19
-bindsym $mod+Alt+Shift+0 move container to workspace number 20; workspace 20
+bindsym $mod+Shift+F1 move container to workspace number 11; workspace 11
+bindsym $mod+Shift+F2 move container to workspace number 12; workspace 12
+bindsym $mod+Shift+F3 move container to workspace number 13; workspace 13
+bindsym $mod+Shift+F4 move container to workspace number 14; workspace 14
+bindsym $mod+Shift+F5 move container to workspace number 15; workspace 15
+bindsym $mod+Shift+F6 move container to workspace number 16; workspace 16
+bindsym $mod+Shift+F7 move container to workspace number 17; workspace 17
+bindsym $mod+Shift+F8 move container to workspace number 18; workspace 18
+bindsym $mod+Shift+F9 move container to workspace number 19; workspace 19
+bindsym $mod+Shift+F10 move container to workspace number 20; workspace 20
 
 
 # exit
