--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,6 +1,6 @@
 # This is i3-specific
 set $mod Mod4
-set $Locker i3lock -i ~/.wallpaper.png && sleep 1
+set $Locker i3lock-fancy && sleep 1
 
 exec --no-startup-id hsetroot -fill ~/.wallpaper.png
 exec --no-startup-id nm-applet &
