--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,6 +1,6 @@
 # This is sway-specific
 set $mod Mod4
-set $Locker swaylock -i ~/.wallpaper.png && sleep 1
+set $Locker swaylock -i ~/.wallpaper.png -s fill && sleep 1
 
 output "*" bg ~/.wallpaper.png fill
 
