--- a/.config/i3/config
+++ b/.config/i3/config
@@ -40,7 +40,7 @@ bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun 
 # common apps keybinds
 bindsym Print exec scrot 'Cheese_%a-%d%b%y_%H.%M.png' -e 'viewnior ~/$f'
 bindsym $mod+Ctrl+f exec firefox
-bindsym $mod+Ctrl+c exec chromium
+bindsym $mod+Ctrl+c exec GDK_BACKEND=x11 chromium
 bindsym $mod+Ctrl+p exec evolution
 
 # Lock, shutdown etc.
