--- a/.config/sway/config
+++ b/.config/sway/config
@@ -32,6 +32,9 @@ titlebar_padding 2
 # Rules for wayland native windows
 for_window [app_id=blueman-manager] floating enable
 
+# Start notification daemon
+exec mako
+
 # i3 doesn't seem to support including configs, so the synchronization of the
 # generic configuration has to be done manually.
 include ~/.dotfiles/.config/sway/config_generic
