--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,7 +41,7 @@ bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun 
 bindsym Print exec scrot 'Cheese_%a-%d%b%y_%H.%M.png' -e 'viewnior ~/$f'
 bindsym $mod+Ctrl+f exec firefox
 bindsym $mod+Ctrl+c exec GDK_BACKEND=x11 chromium
-bindsym $mod+Ctrl+p exec GDK_BACKEND=x11 evolution
+bindsym $mod+Ctrl+p exec thunderbird
 
 # Lock, shutdown etc.
 bindsym $mod+l exec --no-startup-id $Locker, mode "default"
