add guix config

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,7 +8,7 @@ font=SauceCodePro Nerd Font Mono:size=7
 # initial-window-mode=windowed
 # pad=2x2
 shell=tmux
-term=foot
+term=xterm-256color
 login-shell=no
 # workers=<number of logical CPUs>
 
