--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# upgrade $TERM
+set -g default-terminal "xterm-256color"
+
 # $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # set Zsh as your default Tmux shell
 set-option -g default-shell /bin/zsh
@@ -22,9 +25,6 @@ set -g display-time 4000
 
 # refresh 'status-left' and 'status-right' more often
 set -g status-interval 5
-
-# upgrade $TERM
-set -g default-terminal "screen-256color"
 
 # emacs key bindings in tmux command prompt (prefix + :) are better than
 # vi keys, even for vim users
