--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # upgrade $TERM
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 
 # $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # set Zsh as your default Tmux shell
