--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "tmux-256color"
 
 # $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # set Zsh as your default Tmux shell
-set-option -g default-shell /bin/zsh
+set-option -g default-shell ~/.guix-profile/bin/zsh
 
 # TMUX Plugins
 set -g @plugin 'tmux-plugins/tpm'
