autolock sway after 10 minutes

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -2,6 +2,10 @@
 set $mod Mod4
 set $Locker swaylock -i ~/.wallpaper.png -s fill && sleep 1
 
+exec swayidle -w \
+    timeout 600 $lock \
+    before-sleep $lock
+
 output "*" bg ~/.wallpaper.png fill
 
 bindsym $mod+Shift+r reload
