--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,10 +1,11 @@
 # This is sway-specific
 set $mod Mod4
+
 set $Locker swaylock -i ~/.wallpaper.png -s fill && sleep 1
 
 exec swayidle -w \
-    timeout 600 $lock \
-    before-sleep $lock
+    timeout 600 $Locker \
+    before-sleep $Locker
 
 output "*" bg ~/.wallpaper.png fill
 
