--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,8 @@
 set -g default-terminal "tmux-256color"
 
 # $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-# set Zsh as your default Tmux shell
-set-option -g default-shell ~/.guix-profile/bin/zsh
+# set default Tmux shell
+set-option -g default-command fish
 
 # TMUX Plugins
 set -g @plugin 'tmux-plugins/tpm'
