--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,7 +1,11 @@
 # This is sway-specific
 set $mod Mod4
 
-set $Locker swaylock -i ~/.wallpaper.png -s fill && sleep 1
+# swaylock has serious issues with leaking screen content and crashing, leading to unlocking
+# set $Locker swaylock -i ~/.wallpaper.png -s fill && sleep 1
+
+# waylock can be installed with cargo install waylock --locked, needs libpam-dev
+set $Locker waylock --init-color 0x002b36 --input-color 0x2aa198
 
 output "*" bg ~/.wallpaper.png fill
 
