--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,7 +3,7 @@ set $mod Mod4
 
 set $Locker i3lock-fancy && sleep 1
 
-exec --no-startup-id xwallpaper --stretch ~/.wallpaper.png
+exec --no-startup-id "sh -c 'sleep 3; exec xwallpaper --stretch ~/.wallpaper.png'"
 exec --no-startup-id i3-autodisplay
 
 bindsym $mod+Shift+r restart
