enable format on type and on save for python

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,8 +3,8 @@ set $mod Mod4
 
 set $Locker i3lock-fancy && sleep 1
 
-exec --no-startup-id "sh -c 'sleep 3; exec xwallpaper --stretch ~/.wallpaper.png'"
 exec --no-startup-id i3-autodisplay
+exec --no-startup-id xwallpaper --stretch ~/.wallpaper.png
 
 bindsym $mod+Shift+r restart
 
