--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -68,7 +68,8 @@
   },
   "coc.source.buffer.enable": true,
   "coc.source.buffer.priority": 1,
-  "coc.preferences.formatOnSaveFiletypes": ["rust", "java"],
+  "coc.preferences.formatOnType": true,
+  "coc.preferences.formatOnSaveFiletypes": ["rust", "java", "python"],
   "coc.preferences.extensionUpdateCheck": "never",
   "coc.preferences.useQuickfixForLocations": true,
   "coc.preferences.maxFileSize": "100MB",
