--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,80 +1,107 @@
 {
-  "yaml.completion": true,
-  "yaml.validate": false,
-  "yaml.schemas": {
-    "~/go/src/github.com/awslabs/goformation/schema/cloudformation.schema.json": "/*.template.*",
-    "kubernetes": "/*"
-  },
-  "yaml.customTags": [
-    "!Ref",
-    "!GetAtt",
-    "!fn",
-    "!And",
-    "!If",
-    "!Not",
-    "!Equals",
-    "!Or",
-    "!FindInMap sequence",
-    "!Base64",
-    "!Cidr",
-    "!Sub",
-    "!GetAZs",
-    "!ImportValue",
-    "!Select",
-    "!Split",
-    "!Join sequence"
-  ],
-  "python.formatting.provider": "yapf",
-  "python.formatting.yapfArgs": [
-    "--style",
-    "{based_on_style: google, indent_width: 4}"
-  ],
-  "python.linting.pylintEnabled": false,
-  "python.linting.pylintArgs": [
-    "--rcfile ~/.dotfiles/google-styleguide/python/pylintrc --indent-string='    '"
-  ],
-  "languageserver": {
-    "clangd": {
-      "command": "clangd",
-      "args": ["--background-index", "--fallback-style=google"],
-      "rootPatterns": [
-        "compile_flags.txt",
-        "compile_commands.json",
-        ".vim/",
-        ".git/",
-        ".hg/"
-      ],
-      "filetypes": ["c", "cpp", "cc", "c++", "objc", "objcpp"]
+    "yaml.completion": true,
+    "yaml.validate": false,
+    "yaml.schemas": {
+        "~/go/src/github.com/awslabs/goformation/schema/cloudformation.schema.json": "/*.template.*",
+        "kubernetes": "/*"
     },
-    "golang": {
-      "command": "go-langserver",
-      "filetypes": ["go"],
-      "initializationOptions": {
-        "gocodeCompletionEnabled": true,
-        "diagnosticsEnabled": false
-      }
+    "yaml.customTags": [
+        "!Ref",
+        "!GetAtt",
+        "!fn",
+        "!And",
+        "!If",
+        "!Not",
+        "!Equals",
+        "!Or",
+        "!FindInMap sequence",
+        "!Base64",
+        "!Cidr",
+        "!Sub",
+        "!GetAZs",
+        "!ImportValue",
+        "!Select",
+        "!Split",
+        "!Join sequence"
+    ],
+    "python.formatting.provider": "yapf",
+    "python.formatting.yapfArgs": [
+        "--style",
+        "{based_on_style: google, indent_width: 4}"
+    ],
+    "python.linting.pylintEnabled": false,
+    "python.linting.pylintArgs": [
+        "--rcfile ~/.dotfiles/google-styleguide/python/pylintrc --indent-string='    '"
+    ],
+    "languageserver": {
+        "clangd": {
+            "command": "clangd",
+            "args": [
+                "--background-index",
+                "--fallback-style=google"
+            ],
+            "rootPatterns": [
+                "compile_flags.txt",
+                "compile_commands.json",
+                ".vim/",
+                ".git/",
+                ".hg/"
+            ],
+            "filetypes": [
+                "c",
+                "cpp",
+                "cc",
+                "c++",
+                "objc",
+                "objcpp"
+            ]
+        },
+        "golang": {
+            "command": "go-langserver",
+            "filetypes": [
+                "go"
+            ],
+            "initializationOptions": {
+                "gocodeCompletionEnabled": true,
+                "diagnosticsEnabled": false
+            }
+        },
+        "dockerfile": {
+            "command": "docker-langserver",
+            "filetypes": [
+                "dockerfile"
+            ],
+            "args": [
+                "--stdio"
+            ]
+        },
+        "bash": {
+            "command": "bash-language-server",
+            "args": [
+                "start"
+            ],
+            "filetypes": [
+                "sh"
+            ],
+            "ignoredRootPaths": [
+                "~"
+            ]
+        }
     },
-    "dockerfile": {
-      "command": "docker-langserver",
-      "filetypes": ["dockerfile"],
-      "args": ["--stdio"]
-    },
-    "bash": {
-      "command": "bash-language-server",
-      "args": ["start"],
-      "filetypes": ["sh"],
-      "ignoredRootPaths": ["~"]
-    }
-  },
-  "coc.source.buffer.enable": true,
-  "coc.source.buffer.priority": 1,
-  "coc.preferences.formatOnType": true,
-  "coc.preferences.formatOnSaveFiletypes": ["rust", "java", "python"],
-  "coc.preferences.extensionUpdateCheck": "never",
-  "coc.preferences.useQuickfixForLocations": true,
-  "coc.preferences.maxFileSize": "100MB",
-  "solargraph.formatting": true,
-  "solargraph.definitions": true,
-  "solargraph.references": true,
-  "solargraph.autoformat": true
+    "coc.source.buffer.enable": true,
+    "coc.source.buffer.priority": 1,
+    "coc.preferences.formatOnType": true,
+    "coc.preferences.formatOnTypeFiletypes": [
+        "python"
+    ],
+    "coc.preferences.formatOnSaveFiletypes": [
+        "*"
+    ],
+    "coc.preferences.extensionUpdateCheck": "weekly",
+    "coc.preferences.useQuickfixForLocations": true,
+    "coc.preferences.maxFileSize": "100MB",
+    "solargraph.formatting": true,
+    "solargraph.definitions": true,
+    "solargraph.references": true,
+    "solargraph.autoformat": true
 }
