--- a/.config/i3/config
+++ b/.config/i3/config
@@ -43,7 +43,8 @@ bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun 
 # common apps keybinds
 bindsym Print exec $ScreenshotGrabber
 bindsym $mod+Ctrl+f exec firefox
-bindsym $mod+Ctrl+c exec GDK_BACKEND=x11 chromium
+bindsym $mod+Ctrl+q exec qutebrowser
+bindsym $mod+Ctrl+c exec chromium
 bindsym $mod+Ctrl+p exec thunderbird
 
 # Lock, shutdown etc.
