--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
   path = nvim
 [alias]
   nicelog = log --graph --decorate=full --all --oneline
+  fuzzy-checkout = "!sh -c \"git for-each-ref --format='%(refname:short)' refs/heads | fzf | xargs git checkout\""
   do-recursive = "!sh -c \"git ${*} ||:; git submodule foreach --recursive 'git ${*} ||:'\" -"
 [diff]
   tool = vimdiff
