--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ set-option -g default-command fish
 
 # TMUX Plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'jimeh/tmux-themepack'
 
 # Configuration
