--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -24,6 +24,7 @@
         "!Split",
         "!Join sequence"
     ],
+    "python.pythonPath": "~/.pyenv/shims/python",
     "python.formatting.provider": "yapf",
     "python.formatting.yapfArgs": [
         "--style",
