I gave up the hassle, use firefox or google chrome -.-

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -44,7 +44,7 @@ bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun 
 bindsym Print exec $ScreenshotGrabber
 bindsym $mod+Ctrl+f exec firefox
 bindsym $mod+Ctrl+q exec qutebrowser
-bindsym $mod+Ctrl+c exec chromium
+bindsym $mod+Ctrl+c exec google-chrome
 bindsym $mod+Ctrl+b exec x-www-browser
 bindsym $mod+Ctrl+p exec thunderbird
 
