--- a/.config/sway/config
+++ b/.config/sway/config
@@ -29,7 +29,7 @@ input type:pointer {
 }
 
 set $output-primary eDP-1
-set $output-secondary HDMI-A-0
+set $output-secondary HDMI-A-0 DP-1
 set $output-tertiary DisplayPort-0
 
 # preffered terminal emulator
