--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,11 @@
 [merge]
-  tool = vimdiff-merge
+  tool = vimdiff
 [mergetool]
-  prompt = true
-  path = nvim
+  prompt = false
+[diff]
+  tool = vimdiff
+[difftool]
+  prompt = false
 [alias]
   nicelog = log --graph --decorate=full --all --oneline
   fuzzy-checkout = "!sh -c \"git for-each-ref --format='%(refname:lstrip=3)' | fzf | xargs git checkout\""
@@ -29,12 +32,6 @@
   submoduleSummary = true
 [core]
   excludesfile = ~/.gitignore_global
-[difftool]
-  path = nvim
-[mergetool "vimdiff-merge"]
-  cmd = nvim -d $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
-[mergetool "vimdiff"]
-  cmd = nvim -d $LOCAL $REMOTE
 [include]
   path = ~/.gitconfig.local
 [pull]
