--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,11 @@
 [merge]
   tool = vimdiff
 [mergetool]
-  prompt = false
+  prompt = true
 [diff]
   tool = vimdiff
 [difftool]
-  prompt = false
+  prompt = true
 [alias]
   nicelog = log --graph --decorate=full --all --oneline
   fuzzy-checkout = "!sh -c \"git for-each-ref --format='%(refname:lstrip=3)' | fzf | xargs git checkout\""
