Revert "removed coc-java for intellij.."
This reverts commit b79e4cff3abbcb877aa2e201e080e2d066ce3b44.

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,17 @@
 {
+  "java.import.gradle.enabled": true,
+  "java.import.maven.enabled": true,
+  "java.maven.downloadSources": true,
+  "java.configuration.maven.userSettings": "~/.m2/settings.xml",
+  "java.codeGeneration.useBlocks": true,
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "java.autobuild.enabled": false,
+  "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
+  "java.format.enabled": true,
+  "java.format.onType.enabled": true,
+  "java.format.comments.enabled": true,
+  "java.errors.incompleteClasspath.severity": "ignore",
+  "java.jdt.ls.vmargs": "-noverify -Xmx4G -XX:+UseG1GC -XX:+UseStringDeduplication -javaagent:/usr/local/share/lombok/lombok.jar -Xbootclasspath/a:/usr/local/share/lombok/lombok.jar",
   "yaml.completion": true,
   "yaml.validate": false,
   "yaml.schemas": {
