--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,17 @@
 [merge]
-  tool = vimdiff
+  tool = vimdiff-merge
 [mergetool]
+  path = nvim
   prompt = true
 [diff]
   tool = vimdiff
 [difftool]
+  path = nvim
   prompt = true
+[mergetool "vimdiff-merge"]
+  cmd = nvim -d $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
+[mergetool "vimdiff"]
+  cmd = nvim -d $LOCAL $REMOTE
 [alias]
   nicelog = log --graph --decorate=full --all --oneline
   fuzzy-checkout = "!sh -c \"git for-each-ref --format='%(refname:lstrip=3)' | fzf | xargs git checkout\""
