--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "tmux-256color"
 
 # $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # set default Tmux shell
-set-option -g default-command fish
+set-option -g default-command zsh
 
 # TMUX Plugins
 set -g @plugin 'tmux-plugins/tpm'
