--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "themes/powerlevel10k"]
 	path = themes/powerlevel10k
 	url = https://github.com/romkatv/powerlevel10k.git
+[submodule "zsh-plugins/fzf-tab"]
+	path = zsh-plugins/fzf-tab
+	url = https://github.com/Aloxaf/fzf-tab
