--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "zsh-plugins/fzf-tab"]
 	path = zsh-plugins/fzf-tab
 	url = https://github.com/Aloxaf/fzf-tab
+[submodule "zsh-plugins/zsh-completions"]
+	path = zsh-plugins/zsh-completions
+	url = https://github.com/zsh-users/zsh-completions
