--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -28,7 +28,23 @@ colors:
     white: "0xfdf6e3"
 
 font:
-  size: 11
+  normal:
+    family: UbuntuMono Nerd Font
+    style: Regular
+
+  bold:
+    family: UbuntuMono Nerd Font
+    style: Bold
+
+  italic:
+    family: UbuntuMono Nerd Font
+    style: Italic
+
+  bold_italic:
+    family: UbuntuMono Nerd Font
+    style: Bold Italic
+
+  size: 12
 
 shell:
   program: tmux
