--- a/.config/i3/config
+++ b/.config/i3/config
@@ -37,8 +37,8 @@ exec systemctl --user import-environment
 exec gnome-keyring-daemon --components=secrets\,pkcs11 --replace
 
 # start dmenu (a program launcher)
-bindsym $mod+Shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -fn 'Ubuntu Nerd Font:size=8'"
-bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font 'Ubuntu Nerd Font 10'
+bindsym $mod+Shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -fn 'Ubuntu:size=8'"
+bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font 'Ubuntu 10'
 
 # common apps keybinds
 bindsym Print exec $ScreenshotGrabber
