--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,7 +1,7 @@
 # -*- conf -*-
 
 # font=
-font=SauceCodePro Nerd Font Mono:size=7
+font=UbuntuMono Nerd Font:size=7
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
