--- a/.config/sway/config
+++ b/.config/sway/config
@@ -7,6 +7,8 @@ set $mod Mod4
 # waylock can be installed with cargo install waylock --locked, needs libpam-dev
 set $Locker waylock --init-color 0x002b36 --input-color 0x2aa198
 
+set $menu rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font 'Ubuntu 10' -monitor 0
+
 set $ScreenshotGrabber grim
 
 output "*" bg ~/.wallpaper.png fill
