fix slow sway startup time

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -54,3 +54,7 @@ include ~/.dotfiles/.config/sway/config_generic
 
 # include local config, if it exists
 include ~/.sway.local
+
+exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
+exec hash dbus-update-activation-environment 2>/dev/null && \
+     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
