--- a/.config/i3/config
+++ b/.config/i3/config
@@ -19,6 +19,7 @@ font pango: Ubuntu Nerd Font 8
 set $output-primary eDP-1-1
 set $output-secondary DP-1-1
 set $output-tertiary DP-1-2
+set $output-quartiary DP-1-3
 
 #############################################
 # From here on it's generic
@@ -126,16 +127,16 @@ workspace 8 output $output-primary
 workspace 9 output $output-primary
 workspace 10 output $output-primary
 
-workspace 11 output $output-secondary $output-tertiary
-workspace 12 output $output-secondary $output-tertiary
-workspace 13 output $output-secondary $output-tertiary
-workspace 14 output $output-secondary $output-tertiary
-workspace 15 output $output-secondary $output-tertiary
-workspace 16 output $output-secondary $output-tertiary
-workspace 17 output $output-secondary $output-tertiary
-workspace 18 output $output-secondary $output-tertiary
-workspace 19 output $output-secondary $output-tertiary
-workspace 20 output $output-secondary $output-tertiary
+workspace 11 output $output-secondary $output-tertiary $output-quartiary
+workspace 12 output $output-secondary $output-tertiary $output-quartiary
+workspace 13 output $output-secondary $output-tertiary $output-quartiary
+workspace 14 output $output-secondary $output-tertiary $output-quartiary
+workspace 15 output $output-secondary $output-tertiary $output-quartiary
+workspace 16 output $output-secondary $output-tertiary $output-quartiary
+workspace 17 output $output-secondary $output-tertiary $output-quartiary
+workspace 18 output $output-secondary $output-tertiary $output-quartiary
+workspace 19 output $output-secondary $output-tertiary $output-quartiary
+workspace 20 output $output-secondary $output-tertiary $output-quartiary
 
 bindsym $alt+Control+Right workspace next
 bindsym $alt+Control+Left workspace prev
