--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -2,6 +2,7 @@
 
 # font=
 font=UbuntuMono Nerd Font:size=7
+dpi-aware=auto
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
