make network status display dependant on NM state

--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -20,8 +20,9 @@ format = "{1m}"
 block = "sound"
 
 [[block]]
+if_command = "systemctl is-active NetworkManager"
 block = "networkmanager"
-on_click = "foot -e nmtui"
+on_click = "xterm -e nmtui"
 interface_name_exclude = ["br\\-[0-9a-f]{12}", "docker\\d+"]
 interface_name_include = []
 
