make foot font rendering non-dpi-aware to fix multi-monitor setup

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,8 +1,8 @@
 # -*- conf -*-
 
 # font=
-font=UbuntuMono Nerd Font:size=7
-dpi-aware=auto
+font=UbuntuMono Nerd Font:size=12
+dpi-aware=no
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
