remove unneeded portal start

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -48,11 +48,9 @@ for_window [app_id=blueman-manager] floating enable
 # Start notification daemon
 exec dunst
 
-exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
+exec systemctl --user import-environment XDG_CURRENT_DESKTOP DISPLAY WAYLAND_DISPLAY SWAYSOCK
 exec hash dbus-update-activation-environment 2>/dev/null && \
-     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
-# For some reason, dbus does not start the xdg-desktop-portal service, although it should
-exec systemctl --user start xdg-desktop-portal-wlr.service
+     dbus-update-activation-environment --systemd XDG_CURRENT_DESKTOP DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
 # i3 doesn't seem to support including configs, so the synchronization of the
 # generic configuration has to be done manually.
