try to update systemd environment in the background to speed up sway startup

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -45,9 +45,7 @@ titlebar_padding 2
 # Rules for wayland native windows
 for_window [app_id=blueman-manager] floating enable
 
-exec systemctl --user import-environment XDG_CURRENT_DESKTOP DISPLAY WAYLAND_DISPLAY SWAYSOCK
-exec hash dbus-update-activation-environment 2>/dev/null && \
-     dbus-update-activation-environment --systemd XDG_CURRENT_DESKTOP DISPLAY WAYLAND_DISPLAY SWAYSOCK
+exec systemctl --user import-environment XDG_CURRENT_DESKTOP DISPLAY WAYLAND_DISPLAY SWAYSOCK &
 
 # Start notification daemon
 exec dunst
